[project]
name = "bridgesetal-ccc"
version = "0.1.0"
description = "Code for Bridges et al. - Mapping intratumoral myeloid-T cell interactomes"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core scientific computing
    "numpy<2",
    "pandas",
    "scipy",

    # Visualization
    "matplotlib",
    "seaborn",

    # Single-cell analysis
    "scanpy",
    "anndata",

    # Machine learning
    "scikit-learn",
    "tensorflow>=2.10,<2.16",  # For TF v1 compat layer

    # Differential abundance (Milo) - from GitHub
    "milopy @ git+https://github.com/emdann/milopy.git",

    # Graph analysis
    "networkx",
    "python-louvain",  # NOT 'community'

    # Utilities
    "distinctipy",
    "bootstrapped",
    "openpyxl",
    "xlsxwriter",
]
